--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "batchflow": "0.4.0",
     "do-google-auth": "git://github.com/nigelsdtech/do-google-auth.git",
-    "emailjs": "1.0.4",
+    "emailjs": "^2.0.0",
     "google-auth-library": "0.9.7",
     "googleapis": "18.x",
     "jws": "3.0.0",
